# cw-zk-base

./: .gitignore  Cargo.toml  NOTICE  README.md
circuit/: circuit.circom  circuit.sym  input.json  proof.json  public.json  verification_key.json  witness.wtns
circuit/circuit_js/: circuit.wasm
src/: contract.rs  error.rs  lib.rs  msg.rs  verifier.rs
